@@ -671,9 +671,9 @@ in bytes of the integer variable and  \fIus\fP is non-zero
 for unsigned integer types.  If \fIdp\fP is specified then integer
 variables of this type will all use this discipline.
 .SH SEE ALSO
-calloc(3)
-cdt(3)
-shell(3)
-optget(3)
+.BR calloc (3),
+.BR cdt (3),
+.BR shell (3),
+.BR optget (3)
 .SH AUTHOR
 David G. Korn (dgk@research.att.com).
